test/fail_compilation/gag4269e.d
// REQUIRED_ARGS: -c -o-

static if(is(typeof(X8.init))) {}
class X8 : Y8 {} 